# robinhood_agent

./: .dockerignore  .env.example  AGENT_LOGIC.md  CHANGELOG.md  Dockerfile  PLAN.md  README.md  TODO.md  api_spec.yaml  docker-compose.yml  pyproject.toml  sector_map.example.json
.github/workflows/: ci-cd.yml
scripts/: auth_robinhood.py  backtest_workflow.sh  capture_today.py  demo_dashboard.py  fetch_history.py  fetch_polygon_history.py  run_backtest.py  run_live.py  test_uw_history.py
src/trader/backtest/: data_store.py  harness.py  metrics.py  policy.py  schemas.py
src/trader/contracts/: selector.py
src/trader/executor/: executor.py  schemas.py
src/trader/exits/: monitor.py  schemas.py
src/trader/flow/: trigger.py
src/trader/gex/: detector.py  schemas.py
src/trader/graph/: agent.py  state.py
src/trader/live/: approval_server.py  cache.py  capture_loop.py  config.py  exit_loop.py  market_hours.py  notifier.py  proposals.py  (+7 more)
tests/: conftest.py
tests/fixtures/: AAPL_option_contracts.json  darkpool.json  flow_alerts.json  gex_mixed.json  gex_negative.json  gex_positive.json  interpolated_iv.json  market_tide.json  technical_macd.json  technical_rsi.json
tests/integration/: test_backtest_harness.py  test_uw_mcp_live.py
tests/unit/: test_agent_graph.py  test_contract_selector.py  test_executor.py  test_exit_monitor.py  test_flow_trigger.py  test_gex_detector.py  test_live_config.py  test_mock_tools.py  test_notifier.py  test_order_manager.py  test_proposals.py  test_risk_engine.py  test_scorer.py  test_telemetry.py  test_ticks.py  test_validators.py
(+28 files in other folders)
