[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trader"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langchain-anthropic>=0.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: requires UW_API_TOKEN env var (deselect with -m 'not live')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
